Fix footer spacing

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   background-color: #29362f;
-  margin-top: 24px;
+  margin-top: 64px;
   color: #fff;
 }
 .containerWrapperStyles {
